Fixed an issue that displays the scrollbar on the right side of Explorer, and meanwhile, the background image can auto-change its size when the user drags and resizes the window size of Web Explorer.

--- a/3_Frontend/AngularApp/src/styles.css
+++ b/3_Frontend/AngularApp/src/styles.css
@@ -1,1 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+.bg-image {
+  background-image: url('./assets/imgs/background.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  height: 100%;
+  width: 100%;
+  overflow: hidden; /* 对于背景图片也设置为hidden，以防万一 */
+}
+
